<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Indicator_HMI" Id="{7b47a216-031e-4e86-87c3-19d3d48ef0ba}">
    <Declaration><![CDATA[TYPE
    ST_Indicator_HMI : STRUCT
        Config  : ST_Indicator_Config;
        Command : ST_Indicator_Command;
        Status  : ST_Indicator_Status;
    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>
